fixed content padding on mobile

--- a/css/dco-theme-12-alpha-default.css
+++ b/css/dco-theme-12-alpha-default.css
@@ -116,11 +116,6 @@
 	padding: 20px 10px 0 0;
 }
 
-.not-front .region-content-inner .block-without-title {
-	padding: 15px;
-}
-
-
 
 #block-views-commerce-cart-block-block-1 .line-item-summary-checkout  {
   float: right;
